# fern

./: .coveragerc  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  README.md  coverage.xml  index.html  mkdocs.yml  pyproject.toml
.cursor/: README.md
.cursor/plans/: Status property feature-7e4184a9.plan.md  Unify property hierarchy-70c97247.plan.md
.cursor/rules/: repo-guidelines.mdc
.github/workflows/: ci.yml
architecture/clean-architecture/: index.html
architecture/overview/: index.html
docs/: index.md
docs/architecture/: clean-architecture.md  overview.md
docs/pyside/: actions.md  components.md  overview.md  patterns.md  views.md
improvements/: README.md  code_improvements.md  controller_refactoring_plan.md
pyside/actions/: index.html
pyside/components/: index.html
pyside/overview/: index.html
pyside/patterns/: index.html
pyside/views/: index.html
search/: search_index.json
src/fern/: __main__.py
src/fern/application/: dtos.py  property_factory.py
src/fern/infrastructure/: __init__.py  controller.py
tests/: conftest.py  ui_standalone.py
tests/pyside_standalone/: README.md  Welcome.md
tests/pyside_standalone/Inbox/: Buy groceries.md  Do stuff.md  Fix leaky faucet.md  Schedule dentist.md  database.json
tests/pyside_standalone/Journal/: 2026-03-10.md  2026-03-11.md  2026-03-12.md
tests/pyside_standalone/Projects/: Roadmap.md
tests/pyside_standalone/Reading List/: Atomic Habits.md  Designing Data-Intensive Applications.md  Project Hail Mary.md  The Pragmatic Programmer.md  database.json
(+199 files in other folders)
