[project]
name = "fern"
version = "0.1.0"
description = "An open files and open source alternative to Notion and AppFlowy for tasks and pages viewing and management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.6",
    "python-frontmatter>=1.1.0",
    "markdown>=3.10",
]

[project.scripts]
fern = "fern.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fern"]
