[project]
name = "fern-app"
version = "0.6.2"
description = "An open files and open source alternative to Notion and AppFlowy for tasks and pages viewing and management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.6",
    "python-frontmatter>=1.1.0",
    "markdown>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[project.scripts]
fern = "fern.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fern"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
